# mlx90640-capture

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  driver.rs  flip.rs  main.rs
