[package]
name = "mlx90640-capture"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Ganev <iganev@cytec.bg>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
itertools = "0"
rpmlx90640 = "0"
image = "0"